--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Email-Filter-Rules
-version:      1.11
+version:      1.12
 version_from: lib/Email/Filter/Rules.pm
 installdirs:  site
 requires:
@@ -9,4 +9,4 @@ requires:
     Test::Simple:                  0.44
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+generated_by: ExtUtils::MakeMaker version 6.30_01
