--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Email-Filter-Rules
-version:      1.12
-version_from: lib/Email/Filter/Rules.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Email-Filter-Rules
+version:             1.121
+abstract:            Simple Rules for Routing Mail with Email::Filter/Mail::Audit
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
     Email::Filter:                 0
     Test::Simple:                  0.44
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Jeff Bisbee (jbisbee@cpan.org)
